--- a/.travis.yml
+++ b/.travis.yml
@@ -48,4 +48,6 @@ before_script:
   - sleep 5
 
 
-script: HTTP_APP_ENV=test cd tests/behat/ && php behat.phar --config='../../plugins/l10n/tests/behat/behat.yml' --strict
+script: 
+  - HTTP_APP_ENV=test cd tests/behat/ && php behat.phar --strict
+  - HTTP_APP_ENV=test cd tests/behat/ && php behat.phar --config='../../plugins/l10n/tests/behat/behat.yml' --strict
